Fix singular reference to unit when the application count=1.

--- a/src/SFA.Apprenticeships.Web.Recruit/Views/ProviderUser/Home.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/ProviderUser/Home.cshtml
@@ -378,7 +378,7 @@
                                                 {
                                                     <span style="color: red; font-weight: bold">0<br /> @units</span>
                                                 }
-                                                else if (vacancy.NewApplicationCount == 1)
+                                                else if (vacancy.NewApplicationCount == 1 || vacancy.ApplicationCount == 1)
                                                 {
                                                     <span>1<br /> @unit</span>
                                                 }
