Webtrends: Base Tag Implementation.

--- a/src/SFA.Apprenticeships.Web.Recruit/Views/Shared/_Layout.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/Shared/_Layout.cshtml
@@ -23,6 +23,7 @@
     <link rel="apple-touch-icon-precomposed" sizes="120x120" href="@Url.CdnImage("apple-touch-icon-120x120.png")">
     <link rel="apple-touch-icon-precomposed" sizes="76x76" href="@Url.CdnImage("apple-touch-icon-76x76.png")">
     <link rel="apple-touch-icon-precomposed" href="@Url.CdnImage("apple-touch-icon-60x60.png")">
+    <script type="text/javascript" src="~/Content/_assets/js/webtrends/webtrends.load.js"></script>
     @Styles.Render("~/bundles/font-awesome")
     @Html.Partial("_Scripts")
 </head>
