--- a/src/SFA.Apprenticeships.Web.Manage/Views/Shared/_Layout.cshtml
+++ b/src/SFA.Apprenticeships.Web.Manage/Views/Shared/_Layout.cshtml
@@ -1,5 +1,4 @@
-﻿@using SFA.Apprenticeships.Web.Common.Constants
-@using SFA.Apprenticeships.Web.Common.Framework
+﻿@using SFA.Apprenticeships.Web.Common.Framework
 @using SFA.Apprenticeships.Web.Manage.Constants
 
 <!DOCTYPE html>
