--- a/src/SFA.Apprenticeships.Web.Manage/Content/_assets/scss/modules/_vacancy.scss
+++ b/src/SFA.Apprenticeships.Web.Manage/Content/_assets/scss/modules/_vacancy.scss
@@ -74,7 +74,7 @@ html:not(.touch) .editable-item {
 }
 
 .raa-icon-comment {
-    @extend copy-19;
+    @include copy-19;
     font-size: 19px !important;    
     color: $turquoise;
 }
