DE50: replace fotawesome image with normal svg image.

--- a/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/_CommentIcon.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/_CommentIcon.cshtml
@@ -2,5 +2,8 @@
     
 @if (Model.HasComment && Model.Status.IsStateEditable())
 {
-    <a href="@Model.ViewCommentUrl"><i class="fa fa-comment the-icon raa-icon-comment" title="there are comments"><span class="visuallyhidden">there are comments</span></i></a>
+    <a href="@Model.ViewCommentUrl">
+        @*<i class="fa fa-comment the-icon raa-icon-comment" title="there are comments"><span class="visuallyhidden">there are comments</span></i>*@
+        <img src="~/Content/_assets/img/bubble.svg" class="raa-icon-comment" alt="there are comments"/>
+    </a>
 }
