--- a/src/SFA.Apprenticeships.Web.Recruit/Content/_assets/scss/modules/_vacancy.scss
+++ b/src/SFA.Apprenticeships.Web.Recruit/Content/_assets/scss/modules/_vacancy.scss
@@ -79,6 +79,11 @@ html:not(.touch).js .editable-item {
     color: $turquoise;
 }
 
+.raa-icon-comment-img {    
+    height: 1em !important;               
+    padding:1px 0 0 0;
+}
+
 h2{
     a{
         i.raa-icon-comment{
