--- a/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/_CommentIcon.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/_CommentIcon.cshtml
@@ -2,8 +2,7 @@
     
 @if (Model.HasComment && Model.Status.IsStateEditable())
 {
-    <a href="@Model.ViewCommentUrl">
-        @*<i class="fa fa-comment the-icon raa-icon-comment" title="there are comments"><span class="visuallyhidden">there are comments</span></i>*@
-        <img src="~/Content/_assets/img/bubble.svg" class="raa-icon-comment" alt="there are comments"/>
+    <a href="@Model.ViewCommentUrl">        
+        <img src="~/Content/_assets/img/bubble.svg" class="raa-icon-comment-img" alt="there are comments"/>
     </a>
 }
