--- a/src/SFA.Apprenticeships.Web.Common/Content/scss/components/_buttons.scss
+++ b/src/SFA.Apprenticeships.Web.Common/Content/scss/components/_buttons.scss
@@ -47,7 +47,7 @@
 // Start now buttons
 .get-started {
   .button {
-    background: $button-colour url(../Content/_assets/img/icon-pointer.png) 100% 50% no-repeat;
+    background: $button-colour url(../img/icon-pointer.png) 100% 50% no-repeat;
     background-size: 30px 19px;
     color: #FFF;
     font-size: 24px;
@@ -57,7 +57,7 @@
     padding: 14px 41px 10px 16px;
     text-transform: none;
     @include device-pixel-ratio(2) {
-      background-image: url(../Content/_assets/img/icon-pointer-2x.png);
+      background-image: url(../img/icon-pointer-2x.png);
     }
     @media (max-width: 640px) {
       font-size: 20px;
