Added hidden version number / environment in recruit / manage

--- a/src/SFA.Apprenticeships.Web.Recruit/Views/Shared/_Layout.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/Shared/_Layout.cshtml
@@ -148,6 +148,7 @@
                     <img src="@Url.CdnImage("govuk-crest-2x.png")" width="125" height="102" alt="Crown copyright logo">
                     <p>&copy; Crown copyright</p>
                 </a>
+                @Html.Partial("_AboutDisguised")
             </div>
         </div>
         <div class="toggle-content show-print">
