--- a/src/SFA.Apprenticeships.Web.Candidate/Views/Shared/_Layout.cshtml
+++ b/src/SFA.Apprenticeships.Web.Candidate/Views/Shared/_Layout.cshtml
@@ -28,8 +28,8 @@
         <meta name="ROBOTS" content="NOFOLLOW,NOINDEX">
     }
     @RenderSection("metatags", false)
-    <!--[if gt IE 8]><!-->@Styles.Render("~/bundles/not-ie8")<!--<![endif]-->
-    <!--[if lte IE 8]>@Styles.Render("~/bundles/ie8")<![endif]-->
+    <!--[if gt IE 8]><!-->@Styles.Render("~/Content/_assets/styles/not-ie8")<!--<![endif]-->
+    <!--[if lte IE 8]>@Styles.Render("~/Content/_assets/styles/ie8")<![endif]-->
     <link rel="shortcut icon" href="@Url.CdnImage("favicon.ico")" type="image/x-icon">
     <link rel="apple-touch-icon-precomposed" sizes="152x152" href="@Url.CdnImage("apple-touch-icon-152x152.png")">
     <link rel="apple-touch-icon-precomposed" sizes="120x120" href="@Url.CdnImage("apple-touch-icon-120x120.png")">
