Save county Id from multilocation screen

--- a/src/SFA.Apprenticeships.Web.Raa.Common/Views/Shared/DisplayTemplates/Vacancy/LocationSearch.cshtml
+++ b/src/SFA.Apprenticeships.Web.Raa.Common/Views/Shared/DisplayTemplates/Vacancy/LocationSearch.cshtml
@@ -218,6 +218,7 @@
                         <input type="hidden" data-bind="value: itemTown, attr:{'name':'Addresses[' + $index() +'].Address.Town', 'id':'addresses_'+ $index() + 'address__Town' }">
                         <input type="hidden" data-bind="value: itemPostcode, attr:{'name':'Addresses[' + $index() +'].Address.Postcode', 'id':'addresses_'+ $index() + 'address__Postcode' }">
                         <input type="hidden" data-bind="value: itemUprn, attr:{'name':'Addresses[' + $index() +'].Address.Uprn', 'id':'addresses_'+ $index() + 'address__Uprn' }">
+                        <input type="hidden" data-bind="value: itemProvinceName, attr:{'name':'Addresses[' + $index() +'].Address.County', 'id':'addresses_'+ $index() + 'address__County' }">
                     </td>
                     <td class="ta-center">
                         <a href="#" data-bind="click: $root.removeLocationAddress">remove location</a>
