re-enabled degree-level apprenticeship visibility in FAA

--- a/src/SFA.Apprenticeships.Web.Candidate/Views/ApprenticeshipSearch/Index.cshtml
+++ b/src/SFA.Apprenticeships.Web.Candidate/Views/ApprenticeshipSearch/Index.cshtml
@@ -174,8 +174,7 @@
         <p aria-live="polite">Choose how far from your location you want to search.</p>
     </li>
     <li data-id="apprenticeship-level">
-        @*<p aria-live="polite">You can also search by level. Intermediate is equivalent to 5 GCSE passes, Advanced is 2 A-level passes, a Higher can lead to a foundation degree and Degree is equivalent to bachelor's or master's degree.</p>*@
-        <p aria-live="polite">You can also search by level. Intermediate is equivalent to 5 GCSE passes, Advanced is 2 A-level passes and a Higher can lead to a foundation degree.</p>
+        <p aria-live="polite">You can also search by level. Intermediate is equivalent to 5 GCSE passes, Advanced is 2 A-level passes, a Higher can lead to a foundation degree and Degree is equivalent to bachelor's or master's degree.</p>
     </li>
     <li data-id="reset-search-options-link">
         <p aria-live="polite">If you want to start with blank fields, you can clear the form with the button.</p>
@@ -203,8 +202,7 @@
         <p aria-live="polite">Choose how far from your location you want to search.</p>
     </li>
     <li data-id="apprenticeship-level">
-        @*<p aria-live="polite">You can also search by level. Intermediate is equivalent to 5 GCSE passes, Advanced is 2 A-level passes, a Higher can lead to a foundation degree and Degree is equivalent to bachelor's or master's degree.</p>*@
-        <p aria-live="polite">You can also search by level. Intermediate is equivalent to 5 GCSE passes, Advanced is 2 A-level passes and a Higher can lead to a foundation degree.</p>
+        <p aria-live="polite">You can also search by level. Intermediate is equivalent to 5 GCSE passes, Advanced is 2 A-level passes, a Higher can lead to a foundation degree and Degree is equivalent to bachelor's or master's degree.</p>
     </li>
     <li data-id="reset-search-options-link" data-button="Finish">
         <p aria-live="polite">If you want to start with blank fields, you can clear the form with the button.</p>
