--- a/src/SFA.Apprenticeships.Web.Recruit/Views/Shared/_Layout.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/Shared/_Layout.cshtml
@@ -76,7 +76,11 @@
             <div class="banner-container">
                 <div class="phase-notice gov-border grid-wrapper">
                     <div class="grid grid-1-2">
-                        <strong class="beta__label">Beta</strong><!--  <span>This is a prototype – your <a href="https://www.surveymonkey.com/s/MFNR7NZ" target="_blank" rel="external">feedback</a> will help improve it.</span>-->
+                        <strong class="beta__label">Beta</strong>
+                        @if (Request.IsAuthenticated)
+                        {
+                            <span>This is a new service – your <a rel="external" href="https://www.surveymonkey.co.uk/r/LB5ZJRM" target="_blank">feedback</a> helps improve it.</span>
+                        }
                     </div>
                     <div class="grid grid-1-2">
                         @Html.Partial("_LoginPartial")
