Display Town and County in employer address

--- a/src/SFA.Apprenticeships.Web.Candidate/Views/TraineeshipSearch/Details.cshtml
+++ b/src/SFA.Apprenticeships.Web.Candidate/Views/TraineeshipSearch/Details.cshtml
@@ -107,8 +107,9 @@
                             <div itemprop="address">
                                 <p class="small-btm-margin" itemprop="streetAddress">@Model.VacancyAddress.AddressLine1</p>
                                 <p class="small-btm-margin" itemprop="streetAddress">@Model.VacancyAddress.AddressLine2</p>
-                                <p class="small-btm-margin" itemprop="addressLocality">@Model.VacancyAddress.AddressLine3</p>
-                                <p class="small-btm-margin" itemprop="addressRegion">@Model.VacancyAddress.AddressLine4</p>
+                                <p class="small-btm-margin" itemprop="streetAddress">@Model.VacancyAddress.AddressLine3</p>
+                                <p class="small-btm-margin" itemprop="addressLocality">@Model.VacancyAddress.Town</p>
+                                <p class="small-btm-margin" itemprop="addressRegion">@Model.VacancyAddress.County</p>
                                 <p class="" itemprop="postalCode">@Model.VacancyAddress.Postcode</p>
                             </div>
                         </div>
