--- a/src/SFA.Apprenticeships.Web.Raa.Common/Views/Shared/DisplayTemplates/Vacancy/EmployerDetails.cshtml
+++ b/src/SFA.Apprenticeships.Web.Raa.Common/Views/Shared/DisplayTemplates/Vacancy/EmployerDetails.cshtml
@@ -19,7 +19,8 @@
             <p class="small-btm-margin">@Model.Employer.Address.AddressLine1</p>
             <p class="small-btm-margin">@Model.Employer.Address.AddressLine2</p>
             <p class="small-btm-margin">@Model.Employer.Address.AddressLine3</p>
-            <p class="small-btm-margin">@Model.Employer.Address.AddressLine4</p>
+            <p class="small-btm-margin">@Model.Employer.Address.Town</p>
+            <p class="small-btm-margin">@Model.Employer.Address.County</p>
             <p class="small-btm-margin">@Model.Employer.Address.Postcode</p>
         </div>
     </div>
