Add class preserve formatting for vacancy description.

--- a/src/SFA.Apprenticeships.Web.Candidate/Views/ApprenticeshipSearch/Details.cshtml
+++ b/src/SFA.Apprenticeships.Web.Candidate/Views/ApprenticeshipSearch/Details.cshtml
@@ -100,7 +100,7 @@
             </div>
             <div class="grid grid-2-3">
                 <div class="text" itemprop="responsibilities">
-                    <p id="vacancy-full-descrpition">@Html.Raw(Model.FullDescription)</p>
+                    <p id="vacancy-full-descrpition" class="preserve-formatting">@Html.Raw(Model.FullDescription)</p>
                 </div>
             </div>
 
