--- a/src/SFA.Apprenticeships.Web.Candidate/Content/_assets/css/main.css
+++ b/src/SFA.Apprenticeships.Web.Candidate/Content/_assets/css/main.css
@@ -6365,6 +6365,9 @@ html:not(.no-js) [data-editable] {
 #employer-data-display {
   display: none; }
 
+.preserve-formatting {
+  white-space: pre-line; }
+
 .applicant-location,
 .applicant-distance {
   display: block; }
