Add class preserve formatting for vacancy description - Traineships.

--- a/src/SFA.Apprenticeships.Web.Candidate/Views/TraineeshipSearch/Details.cshtml
+++ b/src/SFA.Apprenticeships.Web.Candidate/Views/TraineeshipSearch/Details.cshtml
@@ -48,7 +48,7 @@
             <h2 class="heading-large">Traineeship details</h2>
             <div class="grid grid-2-3">
                 <div class="inner-block-padr">
-                    <p>@Html.Raw(Model.FullDescription)</p>
+                    <p id="vacancy-full-descrpition" class="preserve-formatting">@Html.Raw(Model.FullDescription)</p>
                     <h3 class="heading-medium">Training to be provided</h3>
                     <p>@Html.Raw(Model.TrainingToBeProvided)</p>
                 </div>
