Fix address on dashboard

--- a/src/SFA.Apprenticeships.Web.Recruit/Views/ProviderUser/Home.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/ProviderUser/Home.cshtml
@@ -384,12 +384,12 @@
                     vacancy.Status == VacancyStatus.Live)
                                             {
 
-                                                @vacancy.Location.AddressLine4<br />
+                                                @vacancy.Location.Town<br />
                                                 @vacancy.Location.AddressLineEllipsis
                                             }
                                             else
                                             {
-                                                @vacancy.Location.AddressLine4
+                                                @vacancy.Location.Town
                                             }
                                         </td>
                                         <td class="vac-no-of-applications" data-label="Number of applications">
