--- a/src/SFA.Apprenticeships.Web.Candidate/Views/TraineeshipSearch/_searchResults.cshtml
+++ b/src/SFA.Apprenticeships.Web.Candidate/Views/TraineeshipSearch/_searchResults.cshtml
@@ -48,9 +48,7 @@ else
                             </span>
                         </p>
                     </div>
-                    <p>
-                        @vacancy.Description
-                    </p>
+                    <p class="preserve-formatting">@vacancy.Description</p>
                     <div class="grid-wrapper">
                         <div class="grid grid-2-3">
                             <ul class="list-text no-btm-margin">
